--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,6 @@
     <img src="<%= gravatar_url(@user,size: 100)%>" alt="" class="img-circle">
   </div>
   <div class="name text-center">
-    <h1></h1><%= @user.name %></h1>
+    <h1><%= @user.name %></h1>
   </div>
   </div>
